app_046/app_046_v1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment-v1

spec:
  template:
    metadata:
      name: myapp-v1
      labels:
        app: myapp-v1
        type: restapi

    spec:
      containers:
        - name: simple-api
          image: gcr.io/google-samples/hello-app:1.0 

  replicas: 6 
  selector:
    matchLabels:
      app: myapp-v1
      type: restapi
---

kind: Service
apiVersion: v1
metadata:
  name: myapp-v1-service
spec:
  selector:
    app: myapp-v1
  ports:
    - port: 8080 # Default port for image
