app_046/app_046_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simple-api-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http: 
      paths:
        - path: /v1
          backend:
            serviceName: myapp-v1-service
            servicePort: 8080 
        - path: /v2
          backend:
            serviceName: myapp-v2-service
            servicePort: 8080
